bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__chat_composer__tests__footer_mode_overlay_then_external_esc_hint.snap
---
source: bin/console/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Chaos to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  esc again to edit previous message                                                                "
