bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__chat_composer__tests__remote_image_rows_after_delete_first.snap
---
source: bin/console/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"  [Image #1]                                                                                        "
"                                                                                                    "
"› describe these                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
