bin/console/src/bottom_pane/snapshots/chaos_console__bottom_pane__chat_composer__tests__slash_popup_mo.snap
---
source: bin/console/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› /mo                                                       "
"                                                            "
"                                                            "
"  /model  choose what model and reasoning effort to use     "
